# hypersdk

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/hypercore/: approve_agent.rs  list-markets.rs  multisig_approve_agent.rs  multisig_order.rs  multisig_send_asset.rs  multisig_send_usd.rs  send_order.rs  send_usd.rs  user_role.rs  websocket-candles.rs  websocket.rs
examples/morpho/: borrow_apy.rs  highest_apy.rs  supply_apy.rs  vault_apy.rs  vault_performance.rs
hypecli/: Cargo.toml  install.sh
hypecli/src/: balances.rs  main.rs  morpho.rs  multisig.rs  orders.rs  to_multisig.rs  utils.rs  vault.rs
src/: lib.rs
src/hypercore/: http.rs  mod.rs  signing.rs  types.rs  utils.rs  ws.rs
src/hypercore/types/: api.rs  mod.rs  solidity.rs
src/hyperevm/: mod.rs
src/hyperevm/morpho/: contracts.rs  mod.rs
src/hyperevm/uniswap/: contracts.rs  mod.rs
src/hyperevm/uniswap/prjx/: mod.rs
